# loft

./: .gitignore  LICENSE  README.md  feature-notes.txt  pyproject.toml  requirements-cuda.txt  requirements-frozen.txt
configs/qwen35-27b-combined-dpo/: train-v2.yaml  train.yaml
loft/: __init__.py  cli.py  data_utils.py  import_utils.py
loft/eval/: test_prompts.json
loft/models/: __init__.py  ministral3_compat.py  utils.py
loft/patches/: fla_triton.py
loft/scripts/: __init__.py  debug_tokens.py  dpo.py  eval.py  merge.py  prepare.py  sft.py  utils.py
loft/templates/: lm_model_card.md
loft/trainer/: __init__.py  base_trainer.py  callbacks.py  chunked_logprobs.py  chunked_mlp.py  model_config.py  sft_config.py  sft_trainer.py  triton_rl_kernels.py
loft/trainer/utils/: __init__.py  collators.py  distributed.py  loss.py  math.py  models.py  network.py  padding.py
scripts/: remap_devstral.py  remap_ministral3.py  run_eval_local.py  serve_lora.py  setup-runpod.sh
tests/: arch_results.txt  run_arch_tests.sh
